--- a/PA.InnoSetupProcessor.csproj
+++ b/PA.InnoSetupProcessor.csproj
@@ -46,7 +46,9 @@
     <DelaySign>false</DelaySign>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="PA.InnoSetupProcessor.nuspec" />
     <None Include="PA.Toolbox.snk" />
     <None Include="packages.config">
@@ -57,7 +59,7 @@
     <Compile Include="..\common\GlobalAssemblyInfo.cs">
       <Link>GlobalAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="InnoSetupProcessor.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="InnoSetupFileItem.cs" />
     <Compile Include="Nuget\CommonRessources.cs">
       <SubType>Code</SubType>
@@ -66,6 +68,8 @@
     <Compile Include="Nuget\MsBuildProjectUtility.cs" />
     <Compile Include="Nuget\ProjectInSolution.cs" />
     <Compile Include="Nuget\Solution.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SolutionProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
