--- a/PA.InnoSetupProcessor.nuspec
+++ b/PA.InnoSetupProcessor.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>PA.InnoSetupProcessor</id>
-    <version>4.0.5462-b48779-develop</version>
+    <version>4.1.5463</version>
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
