--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CLAP" version="4.6" targetFramework="net45" />
+  <package id="GitVersionTask" version="2.0.1" targetFramework="net45" developmentDependency="true" />
+  <package id="ini-parser" version="2.1.1" targetFramework="net45" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
   <package id="NuGet.Core" version="2.8.3" targetFramework="net45" />
 </packages>
