--- a/PA.InnoSetupProcessor.csproj
+++ b/PA.InnoSetupProcessor.csproj
@@ -19,7 +19,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Commandlineparameters>-iss="C:\Users\thomas gervais\Documents\Projects\ST.Wafermap\Wafermap.Setup\bin\Debug\ST.Wafermap.iss" -sln="C:\Users\thomas gervais\Documents\Projects\ST.Wafermap\ST.WaferMap.sln" </Commandlineparameters>
