--- a/packages.config
+++ b/packages.config
@@ -5,4 +5,5 @@
   <package id="ini-parser" version="2.1.1" targetFramework="net45" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
   <package id="NuGet.Core" version="2.8.3" targetFramework="net45" />
+  <package id="PepitaPackage" version="1.21.4" targetFramework="net45" developmentDependency="true" />
 </packages>
